# ChessBoard

./: #UI.glade#  .UI.glade.swp  Bishop.cpp  Bishop.h  CMakeLists.txt  Cell.cpp  Cell.h  ChessBoard.cpp  ChessBoard.h  Chessman.cpp  Chessman.h  King.cpp  King.h  Knight.cpp  Knight.h  Makefile  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  README.md  Rook.cpp  Rook.h  UI.glade  UI.glade~  UI.xml  a.out  main.cpp  meson.build  t.glade
CMakeBuild/: CMakeCache.txt  ChessAP  Makefile  cmake_install.cmake
images/: chessboard.xcf
include/: .handler.hpp.swp  Bishop.h  Cell.h  ChessBoard.h  Chessman.h  King.h  Knight.h  Pawn.h  Player.h  Queen.h  Rook.h  handler.hpp
include/gui/: .StackPage.hpp.swp  MainWindow.hpp  StackPage.hpp  utility.hpp
res/: style.css
src/: Bishop.cpp  Cell.cpp  ChessBoard.cpp  Chessman.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp  handler.cpp  handler.hpp  main.cpp
src/gui/: .StackPage.cpp.swp  .drag_drop.cpp.swp  MainWindow.cpp  StackPage.cpp  drag_drop.cpp  utility.cpp
